# AppFinanceiro

./: .gitignore  MELHORIAS.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: auth.py  dashboard.py  db.py  forms.py  helpers.py  main.py
password_manager/: encryption.py  expiry_days_config.json  main.py  salt.salt
sqlserver/: app_financeiro.py  dbFinanceiro_queries.sql  main.py  queries.sql  requirements.txt
